...
  val consistentTagStyle =
      TagStyle(
          MaterialTheme.colorScheme.onPrimary,
          MaterialTheme.colorScheme.secondaryContainer,
          textSize)

  Box(modifier = Modifier.size(width, height).testTag("sizeTagSelector")) {
    Column(modifier = Modifier.fillMaxWidth().wrapContentHeight()) {
      Box(modifier = Modifier.fillMaxWidth().wrapContentHeight()) {
        DropdownMenu(
            expanded = expanded.value && dropdownMenuHeight != 0.dp,
            onDismissRequest = { expanded.value = false },
            properties = PopupProperties(focusable = false),
...
